--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iris Species Predictor</title>
-    <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
+    <link href="static\styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h2>Iris Flower Species Prediction</h2>
-        <form action="{{ url_for('predict') }}" method="post">
+        <form action="app.py" method="post">
             Sepal Length: <input type="text" name="sepal_length" required="required">
             Sepal Width: <input type="text" name="sepal_width" required="required">
             Petal Length: <input type="text" name="petal_length" required="required">
